--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>My JavaScript App</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/cosmo/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <nav class="navbar navbar-dark bg-primary mb-3">
@@ -29,7 +30,7 @@
       <span class="form-end"></span>
     </div>
     <br>
-    <div class="posts"></div>
+    <div id="posts"></div>
   </div>
   <footer class="mt-5 p-3 text-center bg-light">
     MicroPosts &copy;
