--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1>Say Something</h1>
       <p class="lead">What's on your Mind</p>
       <div class="form-group">
-        <input type="text" id="title" class="form-control" placeholder="Post Title">
+        <input id="title" type="text"  class="form-control" placeholder="Post Title">
       </div>
       <div class="form-group">
         <textarea id="body" class="from-control" placeholder="Post Body"></textarea>
